name change: EventController -> SportController abstracted away logic from controller into CompetitorService
