# app/src/main/java/org/example/controllers/SportController.java
@@ -2,27 +2,23 @@ package org.example.controllers;
 
 import org.example.api.SportserviceApi;
 import org.example.model.EventsModel;
-import org.example.repository.CompetitorRepository;
+import org.example.service.CompetitorService;
 import org.example.service.EventService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
 
-import java.util.List;
-
 @Controller
-public class EventController implements SportserviceApi {
+public class SportController implements SportserviceApi {
 
-    public static final int TEAMS_MAX_QUERY = 200;
-
-    private final CompetitorRepository competitorRepository;
+    private final CompetitorService competitorService;
 
     private final EventService eventService;
 
     @Autowired
-    public EventController(CompetitorRepository competitorRepository, EventService eventService) {
-        this.competitorRepository = competitorRepository;
+    public SportController(CompetitorService competitorService, EventService eventService) {
+        this.competitorService = competitorService;
         this.eventService = eventService;
     }
 
@@ -51,24 +47,15 @@ public class EventController implements SportserviceApi {
         return new ResponseEntity<>(response, HttpStatus.OK);
     }
 
-    // TODO: 15.02.2023 rework to TeamsController
     @Override
     public ResponseEntity<String> getTeams() {
-        List<String> teamNames = competitorRepository.getUniqueCompetitorNames();
 
-        if (teamNames.isEmpty()) {
+        if (competitorService.isCompetitorRepositoryEmpty()) {
             return new ResponseEntity<>(HttpStatus.NOT_FOUND);
         }
 
-        StringBuilder result = new StringBuilder();
+        String response = competitorService.printTeamNames();
 
-        result.append("Team names:\n\n");
-
-        for (String name : teamNames) {
-            result.append(name+"\n");
-        }
-
-        return new ResponseEntity<>(result.toString(), HttpStatus.OK);
+        return new ResponseEntity<>(response, HttpStatus.OK);
     }
-
 }
